Dodata profilna stranica korisnika

--- a/ProjectISA-front/src/app/app.component.html
+++ b/ProjectISA-front/src/app/app.component.html
@@ -30,6 +30,14 @@
           Adresses
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" id="addressAdmin" routerLink="/profile/1">
+          <i class="fa fa-envelope-o">
+            <span class="badge badge-warning">A</span>
+          </i>
+          Profile
+        </a>
+      </li>
           </ul>
 
     <ul class="navbar-nav mr-auto">
