--- a/projectISA-front/src/app/components/user-profile/user-profile.component.html
+++ b/projectISA-front/src/app/components/user-profile/user-profile.component.html
@@ -38,26 +38,26 @@
 				<tbody>
 					<tr id='addr0' data-id="0" class="hidden">
 						<td data-name="name">
-							<input type="text" disabled name='name0' class="form-control" value="{{user.name}}" />
+							<input type="text"  name='name0' class="form-control" [(ngModel)]="user.name" />
 						</td>
 						<td data-name="mail">
-							<input type="text" disabled name='mail0' class="form-control" value="{{user.lastName}}" />
+							<input type="text"  name='mail0' class="form-control" [(ngModel)]="user.lastName" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="{{user.username}}"/>
+							<input name="desc0"  class="form-control" [(ngModel)]="user.username"/>
 						</td>
 						<td data-name="desc">
-							<input disabled type="text" disabled name="desc0" class="form-control" value="{{user.email}}" />
+							<input  type="text" disabled name="desc0" class="form-control" [(ngModel)]="user.email" />
                         </td>
                         <td data-name="desc">
-							<input type="text" disabled name="desc0" class="form-control" value="{{user.phoneNumber}}" />
+							<input type="text" name="desc0" class="form-control" [(ngModel)]="user.phoneNumber" />
                         </td>
                         <td data-name="desc">
-							<input disabled type="text" disabled name="desc0" class="form-control" value="{{user.insuranceNumber}}" />
+							<input type="text" disabled name="desc0" class="form-control" [(ngModel)]="user.insuranceNumber" />
                         </td>
                         <td data-name="del">
 							<button name="del0" class='btn btn-danger glyphicon glyphicon-remove row-remove'><span
-									aria-hidden="true" (click)="update(user.id)">Update</span></button>
+									aria-hidden="true" (click)="update()">Update</span></button>
                         </td>
 					</tr>
 				</tbody>
