--- a/projectISA-front/src/app/components/medical-record/medical-record.component.html
+++ b/projectISA-front/src/app/components/medical-record/medical-record.component.html
@@ -1,1 +1,22 @@
-<p>medical-record works!</p>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+
+<div class="container">
+	<div class="row clearfix">
+		<h4>Medical record </h4>
+        
+
+        <div class="col-md-12 table-responsive">
+			<h4>Disease history: </h4>
+			<ul>
+				<li  *ngFor="let disease of medicalRecord.diseaseHistory">
+                   {{disease.name}}
+                </li>	
+            </ul>
+		</div>
+	</div>
+</div>
