--- a/projectISA-front/src/app/components/history/history.component.html
+++ b/projectISA-front/src/app/components/history/history.component.html
@@ -41,10 +41,10 @@
 							<input type="text" disabled name='mail0' class="form-control" value="Dobavi doktora po id" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="{{examination.type}}" />
+							<input name="desc0" disabled class="form-control" value="Dobavi tip" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="{{examination.duration}}" />
+							<input name="desc0" disabled class="form-control" value="Dobavi tip" />
 						</td>
 						<td data-name="desc">
 							<input name="desc0" disabled class="form-control" value="{{examination.price}}" />
