--- a/projectISA-front/src/app/components/login/login.component.html
+++ b/projectISA-front/src/app/components/login/login.component.html
@@ -18,7 +18,7 @@
                                 <div class="row register-form">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <input type="password" [(ngModel)]="username" name="pass1" class="form-control" placeholder="Username" value="" />
+                                            <input type="text" [(ngModel)]="username" name="pass1" class="form-control" placeholder="Username" value="" />
                                         </div>
                                         <div class="form-group">
                                             <input type="password" [(ngModel)]="password" name="pass2" class="form-control"  placeholder="Password" value="" />
