--- a/projectISA-front/src/app/components/doctors/doctors.component.html
+++ b/projectISA-front/src/app/components/doctors/doctors.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <h1>Doctors filter</h1>
-    <form #myForm="ngForm" novalidate (ngSubmit)="doFilter(myForm)">
+    <form #myForm="ngForm" novalidate (ngSubmit)="loadAllDoctors()">
         <div class="form-group">
             <label>First name</label>
             <input type="text" class="form-control" name="firstName" [(ngModel)]="firstName">
@@ -16,12 +16,12 @@
             <input type="number" class="form-control" name="rate" [(ngModel)]="rate">
         </div>
 
-        <div [class.d-none]="date!=undefined" class="form-group">
+        <div [class.d-none]="!showDate" class="form-group">
             <label>Date</label>
             <input type="date" class="form-control" name="date" [(ngModel)]="date">
         </div>
 
-        <div [class.d-none]="type!=undefined" class="form-group">
+        <div [class.d-none]="!showType" class="form-group">
             <label>Type</label>
             <input type="text" class="form-control" name="type" [(ngModel)]="type">
         </div>
