Kreirane funkcionalnosti za unapred definisane preglede

--- a/ProjectISA-front/src/app/app.component.html
+++ b/ProjectISA-front/src/app/app.component.html
@@ -22,6 +22,14 @@
           UsersAdmin
         </a>
       </li>
+      <!--<li  class="nav-item" id="reservationsAdminId">
+        <a class="nav-link" routerLink="/reservations">
+          <i class="fa fa-envelope-o">
+            <span class="badge badge-danger">M</span>
+          </i>
+          ReservationsAdmin
+        </a>
+      </li>-->
       <li class="nav-item" id="clinicsUserId">
         <a class="nav-link" id="addressAdmin" routerLink="/clinics">
           <i class="fa fa-envelope-o">
