--- a/projectISA-front/src/app/components/history/history.component.html
+++ b/projectISA-front/src/app/components/history/history.component.html
@@ -6,6 +6,13 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
 <div class="container">
+	<div class="form-group">
+		<label>Sort by</label>
+		<select (change)="onChange()" class="custom-select" name="type"  [(ngModel)]="sortType" >
+			<option  *ngFor="let st of sortTypes" >{{st}}</option>
+		</select>
+	</div>
+
 	<div class="row clearfix">
 		<div class="col-md-12 table-responsive">
 			<h4>Examination history: </h4>
@@ -28,6 +35,9 @@
 							Price
 						</th>
 						<th class="text-center">
+							Clinic
+						</th>
+						<th class="text-center">
 							Medical room
 						</th>
 					</tr>
@@ -35,22 +45,25 @@
 				<tbody>
 					<tr id='addr0' data-id="0" class="hidden" *ngFor="let examination of examinations">
 						<td data-name="name">
-							<input type="text" disabled name='name0' class="form-control" value="{{examination.startDateTime}}" />
+							<input type="text" disabled name='name0' class="form-control" [value]="examination.date" />
 						</td>
 						<td data-name="mail">
-							<input type="text" disabled name='mail0' class="form-control" value="Dobavi doktora po id" />
+							<input type="text" disabled name='mail0' class="form-control" [value]="examination.doctorUsername" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="Dobavi tip" />
+							<input name="desc0" disabled class="form-control" [value]="examination.type" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="Dobavi tip" />
+							<input name="desc0" disabled class="form-control" [value]="examination.duration" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="{{examination.price}}" />
+							<input name="desc0" disabled class="form-control" [value]="examination.price" />
 						</td>
 						<td data-name="desc">
-							<input name="desc0" disabled class="form-control" value="Dobavi po medical room" />
+							<input name="desc0" disabled class="form-control" [value]="examination.clinic" />
+						</td>
+						<td data-name="desc">
+							<input name="desc0" disabled class="form-control" [value]="examination.medicalRoom" />
 						</td>
 					</tr>
 				</tbody>
