--- a/projectISA-front/src/app/components/clinic/clinic.component.html
+++ b/projectISA-front/src/app/components/clinic/clinic.component.html
@@ -20,14 +20,17 @@
                             <div class="col-12">
                                 <ul class="nav nav-tabs mb-4" id="myTab" role="tablist">
                                     <li class="nav-item">
-                                        <a (click)="changeShowBasicInfo(true)" class="nav-link active" [class.active]="showBasicInfo" id="basicInfo-tab" data-toggle="tab" role="tab" aria-controls="basicInfo" [class.aria-selected]="showBasicInfo" >Basic Info</a>
+                                        <a (click)="changeView('basic')" class="nav-link active" [class.active]="view==='basic'" id="basicInfo-tab" data-toggle="tab" role="tab" aria-controls="basicInfo" [class.aria-selected]="view==='basic'" >Basic Info</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a (click)="changeShowBasicInfo(false)" class="nav-link" [class.active]="!showBasicInfo" id="pricelist-tab" data-toggle="tab"  role="tab" aria-controls="pricelist" [class.aria-selected]="!showBasicInfo"  >Pricelist</a>
+                                        <a (click)="changeView('pricelist')" class="nav-link" [class.active]="view==='pricelist'" id="pricelist-tab" data-toggle="tab"  role="tab" aria-controls="pricelist" [class.aria-selected]="view==='pricelist'"  >Pricelist</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a (click)="changeView('predefined')" class="nav-link" [class.active]="view==='predefined'" id="predefined-tab" data-toggle="tab"  role="tab" aria-controls="predefined" [class.aria-selected]="view==='predefined'"  >Predefined examinations</a>
                                     </li>
                                 </ul>
                                 <div class="tab-content ml-1" id="myTabContent" >
-                                    <div *ngIf="showBasicInfo" class="tab-pane fade show active" id="basicInfo" role="tabpanel" aria-labelledby="basicInfo-tab">
+                                    <div *ngIf="view==='basic'" class="tab-pane fade show active" id="basicInfo" role="tabpanel" aria-labelledby="basicInfo-tab">
                                         <div class="row">
                                             <div class="col-sm-3 col-md-2 col-5">
                                                 <label style="font-weight:bold;">Address</label>
@@ -60,16 +63,45 @@
                                     
 
 
-                                    <div *ngIf="!showBasicInfo" class="tab-pane fade show active" id="pricelist" role="tabpanel" aria-labelledby="pricelist-tab">
-                                        <div class="row" *ngFor="let item of clinic.pricelist">
-                                            <div class="col-sm-3 col-md-2 col-5">
-                                                <label style="font-weight:bold;">{{item.typeOfExamination}}</label>
-                                            </div>
-                                            <div class="col-md-8 col-6">
-                                                {{item.price}}
+                                    <div *ngIf="view==='pricelist'" class="tab-pane fade show active" id="pricelist" role="tabpanel" aria-labelledby="pricelist-tab">
+                                        <div *ngFor="let item of clinic.pricelist">
+                                            <div class="row" >
+                                                <div class="col-sm-3 col-md-2 col-5">
+                                                    <label style="font-weight:bold;">{{item.typeOfExamination}}</label>
+                                                </div>
+                                                <div class="col-md-8 col-6">
+                                                    {{item.price}}
+                                                </div> 
+                                                
                                             </div>
                                             <hr />
                                         </div>
+                                        
+                                    </div>
+
+                                    <div *ngIf="view==='predefined'" class="tab-pane fade show active" id="predefined" role="tabpanel" aria-labelledby="predefined-tab">
+                                        <div *ngFor="let pe of predefinedExaminations">
+                                            <div class="row" >
+                                                <ul>
+                                                    <li>Datum: {{pe.date | date}}</li>
+                                                    <li>Doctor: {{pe.doctorUsername}}</li>
+                                                    <li>Type: {{pe.type}}</li>
+                                                    <li>Duration: {{pe.duration}}</li>
+                                                    <li>Price: {{pe.price}}</li>
+                                                    <li>Medical room: {{pe.medicalRoom}}</li>
+                                                    <li><button class="btn btn-primary" (click)="reserve(pe.id)">Reserve</button></li>
+                                                </ul>
+                                                
+                                                    
+                                                
+                                                
+                                                
+                                                
+                                                
+                                            </div>
+                                            <hr />
+                                        </div>
+                                        
                                     </div>
                                 </div>
                             </div>
