--- a/projectISA-front/src/app/components/doctors/doctors.component.html
+++ b/projectISA-front/src/app/components/doctors/doctors.component.html
@@ -39,7 +39,7 @@
         <img class="card-img-top" src="assets/img/clinic.png" alt="Card image">
         <div class="card-body">
           <h4 class="card-title">{{doctor.name}} {{ doctor.lastName}}</h4>
-          <p class="card-text">Ocena: 3</p>
+          <p class="card-text">Average rating: {{doctor.avgDoctorsRate}}</p>
           <a class="btn btn-primary" (click)="selectDoctor(doctor.id)">Select</a>
         </div>
       </div>
